welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:2: error: forward reference extends over definition of variable compteur
  compteur+=1
  ^